[package]
name = "crusty-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Authentication flows for Crusty"

[dependencies]
crusty-core = { path = "../crusty-core" }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
