[package]
name = "crusty-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core business logic for Crusty HTTP client"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
http = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
