[package]
name = "crusty-mock"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mock server engine for Crusty"

[dependencies]
crusty-core = { path = "../crusty-core" }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
