[package]
name = "crusty-mock"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mock server engine for Crusty"

[dependencies]
crusty-core = { path = "../crusty-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = "1"

[dev-dependencies]
reqwest = { workspace = true }
