[package]
name = "crusty-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Protocol adapters for Crusty (REST, GraphQL, gRPC, WebSocket, SSE, MQTT, Socket.IO)"

[dependencies]
crusty-core = { path = "../crusty-core" }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
