[package]
name = "crusty-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proxy interception and MITM-style request capture for Crusty"

[dependencies]
crusty-core = { path = "../crusty-core" }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
