[package]
name = "crusty-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test runner, assertions, and CI mode for Crusty"

[dependencies]
crusty-core = { path = "../crusty-core" }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
