[package]
name = "crusty-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI frontend for Crusty"

[[bin]]
name = "crusty-tui"
path = "src/main.rs"

[dependencies]
crusty-core = { path = "../crusty-core" }
crusty-http = { path = "../crusty-http" }
crusty-store = { path = "../crusty-store" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
