[package]
name = "crusty-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI frontend for Crusty"

[[bin]]
name = "crusty-tui"
path = "src/main.rs"

[dependencies]
crusty-core = { path = "../crusty-core" }
crusty-http = { path = "../crusty-http" }
crusty-store = { path = "../crusty-store" }
crusty-auth = { path = "../crusty-auth" }
crusty-export = { path = "../crusty-export" }
crusty-scripting = { path = "../crusty-scripting" }
crusty-testing = { path = "../crusty-testing" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
